Add ShaderGraph 14.x as a dependency

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Example scenes and tutorial content for Yarn Spinner. To install the samples, click on the Samples tab in the Package Manager window.",
   "unity": "2022.3",
   "dependencies": {
-    "dev.yarnspinner.unity": "3.*"
+    "dev.yarnspinner.unity": "3.*",
+    "com.unity.shadergraph": "14.*"
   },
   "keywords": [
     "Dialogue",
